# goclaw

./: .gitignore  CHANGELOG.md  Makefile  README.md
.claude/: settings.local.json
agent/: manager.go
agent/tools/: cron_tool.go
bus/: events.go  queue.go
channels/: manager.go  thread_bindings.go  weworkwsbot.go  weworkwsbot_test.go
cli/commands/: tui.go
config/: schema.go
gateway/: acp_handler_integration.go  handler.go  server.go  ui.go
gateway/ui_dist/: index.html
gateway/ui_dist/assets/: index-B2qQYWaw.js  index-BQDa21jE.css  index-C3N5tm-C.js  index-CrXhQaX8.js  index-CwxBhZbq.js  index-DI5SdscQ.css  index-Dm2v6rYX.js  index-DoI-06Ee.css  index-Dougvq_o.js  index-G4Ggi-DK.js  index-Mq5flpPd.js  index-R2GrnfkJ.css  index-XpLX8kNc.js  index-oh7McTrj.css  index-rMITRLKK.js
internal/: config.example.json
internal/start/: start.go
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/shell-dist/: index.html
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  tray.rs
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AcpManager.tsx  ChannelList.tsx  ChatPanel.tsx  CronManager.tsx  Dashboard.tsx  Header.tsx  LogsViewer.tsx  SessionDetailModal.tsx  SessionList.tsx  Sidebar.tsx  StatusIndicator.tsx
ui/src/hooks/: useApi.ts  useChannels.ts  useSessions.ts  useTauri.ts  useWebSocket.ts
ui/src/services/: rpc.ts  websocket.ts
ui/src/types/: index.ts
